// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests CategoryCard Component should tests CategoryCard when the card is closed 1`] = `
<View>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffffff",
        "borderBottomWidth": 1,
        "borderColor": "#616161",
        "flexDirection": "row",
        "height": 50,
        "paddingHorizontal": 15,
        "paddingVertical": 10,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "column",
        }
      }
    >
      <Text>
        43 - FOODSERVICE
      </Text>
      <Text>
        4 [missing "en.AUDITS.CUSTOM_ITEMS" translation]
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 10,
          "left": 15,
          "right": 15,
          "top": 10,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="collapsible-card"
    >
      <Icon
        color="#0071e9"
        name="keyboard-arrow-down"
        size={25}
      />
    </View>
  </View>
</View>
`;

exports[`Tests CategoryCard Component should tests CategoryCard when the card is opened 1`] = `
<View>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffffff",
        "borderBottomWidth": 1,
        "borderColor": "#616161",
        "flexDirection": "row",
        "height": 50,
        "paddingHorizontal": 15,
        "paddingVertical": 10,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "column",
        }
      }
    >
      <Text>
        43 - FOODSERVICE
      </Text>
      <Text>
        4 [missing "en.AUDITS.CUSTOM_ITEMS" translation]
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 10,
          "left": 15,
          "right": 15,
          "top": 10,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="collapsible-card"
    >
      <Icon
        color="#0071e9"
        name="keyboard-arrow-up"
        size={25}
      />
    </View>
  </View>
  <RCTScrollView
    data={
      [
        {
          "catgName": "FOODSERVICE",
          "catgNbr": 93,
          "completed": false,
          "completedTs": undefined,
          "completedUserId": undefined,
          "itemName": "Nature Valley Sweet And Salty Nuts Granola Bars",
          "itemNbr": 1234567890,
          "subCatgName": undefined,
          "subCatgNbr": 0,
          "upcNbr": "000055559999",
          "worklistType": "AU",
        },
        {
          "catgName": "FOODSERVICE",
          "catgNbr": 93,
          "completed": false,
          "completedTs": undefined,
          "completedUserId": undefined,
          "itemName": "Nature Valley Sweet And Salty Nuts Granola Bars",
          "itemNbr": 1234567899,
          "subCatgName": undefined,
          "subCatgNbr": 0,
          "upcNbr": "000055559934",
          "worklistType": "AU",
        },
        {
          "catgName": "ELECTRONICS",
          "catgNbr": 99,
          "completed": false,
          "completedTs": undefined,
          "completedUserId": undefined,
          "itemName": "ELECTRONIC ITEM",
          "itemNbr": 987654321,
          "subCatgName": undefined,
          "subCatgNbr": 0,
          "upcNbr": "777555333",
          "worklistType": "AU",
        },
        {
          "catgName": "FRESH BAKERY",
          "catgNbr": 88,
          "completed": false,
          "completedTs": undefined,
          "completedUserId": undefined,
          "itemName": "BAKERY ITEM",
          "itemNbr": 123789456,
          "subCatgName": undefined,
          "subCatgNbr": 0,
          "upcNbr": "111122223333",
          "worklistType": "RA",
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    getItemLayout={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ffffffff",
              "flexDirection": "row",
              "height": 100,
              "justifyContent": "flex-start",
              "marginBottom": 2,
              "opacity": 1,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "flex": 1,
                "justifyContent": "space-evenly",
              }
            }
          >
            <View
              style={
                {
                  "marginTop": 2,
                  "width": "100%",
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "backgroundColor": "#ffffffff",
                    "flexDirection": "row",
                    "opacity": 1,
                    "padding": 5,
                    "paddingLeft": 10,
                    "width": "100%",
                  }
                }
                testID="itemCard"
              >
                <View
                  style={
                    {
                      "flexDirection": "column",
                      "flexShrink": 1,
                      "justifyContent": "space-around",
                      "padding": 5,
                    }
                  }
                  testID="item-details"
                >
                  <View
                    style={
                      {
                        "paddingBottom": 10,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#616161",
                          "flexShrink": 1,
                          "flexWrap": "wrap",
                          "fontSize": 12,
                        }
                      }
                    >
                      [missing "en.GENERICS.ITEM" translation] 1234567890
                    </Text>
                  </View>
                  <View>
                    <Text
                      style={
                        {
                          "flexShrink": 1,
                          "flexWrap": "wrap",
                          "fontSize": 14,
                          "marginVertical": 2,
                        }
                      }
                    >
                      Nature Valley Sweet And Salty Nuts Granola Bars
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ffffffff",
              "flexDirection": "row",
              "height": 100,
              "justifyContent": "flex-start",
              "marginBottom": 2,
              "opacity": 1,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "flex": 1,
                "justifyContent": "space-evenly",
              }
            }
          >
            <View
              style={
                {
                  "marginTop": 2,
                  "width": "100%",
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "backgroundColor": "#ffffffff",
                    "flexDirection": "row",
                    "opacity": 1,
                    "padding": 5,
                    "paddingLeft": 10,
                    "width": "100%",
                  }
                }
                testID="itemCard"
              >
                <View
                  style={
                    {
                      "flexDirection": "column",
                      "flexShrink": 1,
                      "justifyContent": "space-around",
                      "padding": 5,
                    }
                  }
                  testID="item-details"
                >
                  <View
                    style={
                      {
                        "paddingBottom": 10,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#616161",
                          "flexShrink": 1,
                          "flexWrap": "wrap",
                          "fontSize": 12,
                        }
                      }
                    >
                      [missing "en.GENERICS.ITEM" translation] 1234567899
                    </Text>
                  </View>
                  <View>
                    <Text
                      style={
                        {
                          "flexShrink": 1,
                          "flexWrap": "wrap",
                          "fontSize": 14,
                          "marginVertical": 2,
                        }
                      }
                    >
                      Nature Valley Sweet And Salty Nuts Granola Bars
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ffffffff",
              "flexDirection": "row",
              "height": 100,
              "justifyContent": "flex-start",
              "marginBottom": 2,
              "opacity": 1,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "flex": 1,
                "justifyContent": "space-evenly",
              }
            }
          >
            <View
              style={
                {
                  "marginTop": 2,
                  "width": "100%",
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "backgroundColor": "#ffffffff",
                    "flexDirection": "row",
                    "opacity": 1,
                    "padding": 5,
                    "paddingLeft": 10,
                    "width": "100%",
                  }
                }
                testID="itemCard"
              >
                <View
                  style={
                    {
                      "flexDirection": "column",
                      "flexShrink": 1,
                      "justifyContent": "space-around",
                      "padding": 5,
                    }
                  }
                  testID="item-details"
                >
                  <View
                    style={
                      {
                        "paddingBottom": 10,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#616161",
                          "flexShrink": 1,
                          "flexWrap": "wrap",
                          "fontSize": 12,
                        }
                      }
                    >
                      [missing "en.GENERICS.ITEM" translation] 987654321
                    </Text>
                  </View>
                  <View>
                    <Text
                      style={
                        {
                          "flexShrink": 1,
                          "flexWrap": "wrap",
                          "fontSize": 14,
                          "marginVertical": 2,
                        }
                      }
                    >
                      ELECTRONIC ITEM
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ffffffff",
              "flexDirection": "row",
              "height": 100,
              "justifyContent": "flex-start",
              "marginBottom": 2,
              "opacity": 1,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "flex": 1,
                "justifyContent": "space-evenly",
              }
            }
          >
            <View
              style={
                {
                  "marginTop": 2,
                  "width": "100%",
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "backgroundColor": "#ffffffff",
                    "flexDirection": "row",
                    "opacity": 1,
                    "padding": 5,
                    "paddingLeft": 10,
                    "width": "100%",
                  }
                }
                testID="itemCard"
              >
                <View
                  style={
                    {
                      "flexDirection": "column",
                      "flexShrink": 1,
                      "justifyContent": "space-around",
                      "padding": 5,
                    }
                  }
                  testID="item-details"
                >
                  <View
                    style={
                      {
                        "paddingBottom": 10,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#616161",
                          "flexShrink": 1,
                          "flexWrap": "wrap",
                          "fontSize": 12,
                        }
                      }
                    >
                      [missing "en.GENERICS.ITEM" translation] 123789456
                    </Text>
                  </View>
                  <View>
                    <Text
                      style={
                        {
                          "flexShrink": 1,
                          "flexWrap": "wrap",
                          "fontSize": 14,
                          "marginVertical": 2,
                        }
                      }
                    >
                      BAKERY ITEM
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Tests CategoryCard Component should tests CategoryCard when the card is opened and with images 1`] = `
<View>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffffff",
        "borderBottomWidth": 1,
        "borderColor": "#616161",
        "flexDirection": "row",
        "height": 50,
        "paddingHorizontal": 15,
        "paddingVertical": 10,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "column",
        }
      }
    >
      <Text>
        43 - FOODSERVICE
      </Text>
      <Text>
        4 [missing "en.AUDITS.CUSTOM_ITEMS" translation]
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 10,
          "left": 15,
          "right": 15,
          "top": 10,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="collapsible-card"
    >
      <Icon
        color="#0071e9"
        name="keyboard-arrow-up"
        size={25}
      />
    </View>
  </View>
  <RCTScrollView
    data={
      [
        {
          "catgName": "FOODSERVICE",
          "catgNbr": 93,
          "completed": false,
          "completedTs": undefined,
          "completedUserId": undefined,
          "itemName": "Nature Valley Sweet And Salty Nuts Granola Bars",
          "itemNbr": 1234567890,
          "subCatgName": undefined,
          "subCatgNbr": 0,
          "upcNbr": "000055559999",
          "worklistType": "AU",
        },
        {
          "catgName": "FOODSERVICE",
          "catgNbr": 93,
          "completed": false,
          "completedTs": undefined,
          "completedUserId": undefined,
          "itemName": "Nature Valley Sweet And Salty Nuts Granola Bars",
          "itemNbr": 1234567899,
          "subCatgName": undefined,
          "subCatgNbr": 0,
          "upcNbr": "000055559934",
          "worklistType": "AU",
        },
        {
          "catgName": "ELECTRONICS",
          "catgNbr": 99,
          "completed": false,
          "completedTs": undefined,
          "completedUserId": undefined,
          "itemName": "ELECTRONIC ITEM",
          "itemNbr": 987654321,
          "subCatgName": undefined,
          "subCatgNbr": 0,
          "upcNbr": "777555333",
          "worklistType": "AU",
        },
        {
          "catgName": "FRESH BAKERY",
          "catgNbr": 88,
          "completed": false,
          "completedTs": undefined,
          "completedUserId": undefined,
          "itemName": "BAKERY ITEM",
          "itemNbr": 123789456,
          "subCatgName": undefined,
          "subCatgNbr": 0,
          "upcNbr": "111122223333",
          "worklistType": "RA",
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    getItemLayout={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ffffffff",
              "flexDirection": "row",
              "height": 100,
              "justifyContent": "flex-start",
              "marginBottom": 2,
              "opacity": 1,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "flex": 1,
                "justifyContent": "space-evenly",
              }
            }
          >
            <View
              style={
                {
                  "marginTop": 2,
                  "width": "100%",
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "backgroundColor": "#ffffffff",
                    "flexDirection": "row",
                    "opacity": 1,
                    "padding": 5,
                    "width": "100%",
                  }
                }
                testID="itemCard"
              >
                <View>
                  <View
                    style={
                      [
                        {
                          "overflow": "hidden",
                        },
                        {
                          "height": 80,
                          "width": 80,
                        },
                      ]
                    }
                  >
                    <FastImageView
                      defaultSource={null}
                      onFastImageError={[Function]}
                      resizeMode="contain"
                      source={
                        {
                          "priority": "normal",
                          "uri": "https://assets.sams.com.mx/image/upload/f_auto,q_auto:eco,w_350,c_scale,dpr_auto/mx/images/product-images/img_medium/1234567890m.jpg",
                        }
                      }
                      style={
                        {
                          "bottom": 0,
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        }
                      }
                    />
                  </View>
                </View>
                <View
                  style={
                    {
                      "flexDirection": "column",
                      "flexShrink": 1,
                      "justifyContent": "space-around",
                      "padding": 5,
                    }
                  }
                  testID="item-details"
                >
                  <View
                    style={{}}
                  >
                    <Text
                      style={
                        {
                          "color": "#616161",
                          "flexShrink": 1,
                          "flexWrap": "wrap",
                          "fontSize": 12,
                        }
                      }
                    >
                      [missing "en.GENERICS.ITEM" translation] 1234567890
                    </Text>
                  </View>
                  <View>
                    <Text
                      style={
                        {
                          "flexShrink": 1,
                          "flexWrap": "wrap",
                          "fontSize": 14,
                          "marginVertical": 2,
                        }
                      }
                    >
                      Nature Valley Sweet And Salty Nuts Granola Bars
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ffffffff",
              "flexDirection": "row",
              "height": 100,
              "justifyContent": "flex-start",
              "marginBottom": 2,
              "opacity": 1,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "flex": 1,
                "justifyContent": "space-evenly",
              }
            }
          >
            <View
              style={
                {
                  "marginTop": 2,
                  "width": "100%",
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "backgroundColor": "#ffffffff",
                    "flexDirection": "row",
                    "opacity": 1,
                    "padding": 5,
                    "width": "100%",
                  }
                }
                testID="itemCard"
              >
                <View>
                  <View
                    style={
                      [
                        {
                          "overflow": "hidden",
                        },
                        {
                          "height": 80,
                          "width": 80,
                        },
                      ]
                    }
                  >
                    <FastImageView
                      defaultSource={null}
                      onFastImageError={[Function]}
                      resizeMode="contain"
                      source={
                        {
                          "priority": "normal",
                          "uri": "https://assets.sams.com.mx/image/upload/f_auto,q_auto:eco,w_350,c_scale,dpr_auto/mx/images/product-images/img_medium/1234567899m.jpg",
                        }
                      }
                      style={
                        {
                          "bottom": 0,
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        }
                      }
                    />
                  </View>
                </View>
                <View
                  style={
                    {
                      "flexDirection": "column",
                      "flexShrink": 1,
                      "justifyContent": "space-around",
                      "padding": 5,
                    }
                  }
                  testID="item-details"
                >
                  <View
                    style={{}}
                  >
                    <Text
                      style={
                        {
                          "color": "#616161",
                          "flexShrink": 1,
                          "flexWrap": "wrap",
                          "fontSize": 12,
                        }
                      }
                    >
                      [missing "en.GENERICS.ITEM" translation] 1234567899
                    </Text>
                  </View>
                  <View>
                    <Text
                      style={
                        {
                          "flexShrink": 1,
                          "flexWrap": "wrap",
                          "fontSize": 14,
                          "marginVertical": 2,
                        }
                      }
                    >
                      Nature Valley Sweet And Salty Nuts Granola Bars
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ffffffff",
              "flexDirection": "row",
              "height": 100,
              "justifyContent": "flex-start",
              "marginBottom": 2,
              "opacity": 1,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "flex": 1,
                "justifyContent": "space-evenly",
              }
            }
          >
            <View
              style={
                {
                  "marginTop": 2,
                  "width": "100%",
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "backgroundColor": "#ffffffff",
                    "flexDirection": "row",
                    "opacity": 1,
                    "padding": 5,
                    "width": "100%",
                  }
                }
                testID="itemCard"
              >
                <View>
                  <View
                    style={
                      [
                        {
                          "overflow": "hidden",
                        },
                        {
                          "height": 80,
                          "width": 80,
                        },
                      ]
                    }
                  >
                    <FastImageView
                      defaultSource={null}
                      onFastImageError={[Function]}
                      resizeMode="contain"
                      source={
                        {
                          "priority": "normal",
                          "uri": "https://assets.sams.com.mx/image/upload/f_auto,q_auto:eco,w_350,c_scale,dpr_auto/mx/images/product-images/img_medium/987654321m.jpg",
                        }
                      }
                      style={
                        {
                          "bottom": 0,
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        }
                      }
                    />
                  </View>
                </View>
                <View
                  style={
                    {
                      "flexDirection": "column",
                      "flexShrink": 1,
                      "justifyContent": "space-around",
                      "padding": 5,
                    }
                  }
                  testID="item-details"
                >
                  <View
                    style={{}}
                  >
                    <Text
                      style={
                        {
                          "color": "#616161",
                          "flexShrink": 1,
                          "flexWrap": "wrap",
                          "fontSize": 12,
                        }
                      }
                    >
                      [missing "en.GENERICS.ITEM" translation] 987654321
                    </Text>
                  </View>
                  <View>
                    <Text
                      style={
                        {
                          "flexShrink": 1,
                          "flexWrap": "wrap",
                          "fontSize": 14,
                          "marginVertical": 2,
                        }
                      }
                    >
                      ELECTRONIC ITEM
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ffffffff",
              "flexDirection": "row",
              "height": 100,
              "justifyContent": "flex-start",
              "marginBottom": 2,
              "opacity": 1,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "flex": 1,
                "justifyContent": "space-evenly",
              }
            }
          >
            <View
              style={
                {
                  "marginTop": 2,
                  "width": "100%",
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "backgroundColor": "#ffffffff",
                    "flexDirection": "row",
                    "opacity": 1,
                    "padding": 5,
                    "width": "100%",
                  }
                }
                testID="itemCard"
              >
                <View>
                  <View
                    style={
                      [
                        {
                          "overflow": "hidden",
                        },
                        {
                          "height": 80,
                          "width": 80,
                        },
                      ]
                    }
                  >
                    <FastImageView
                      defaultSource={null}
                      onFastImageError={[Function]}
                      resizeMode="contain"
                      source={
                        {
                          "priority": "normal",
                          "uri": "https://assets.sams.com.mx/image/upload/f_auto,q_auto:eco,w_350,c_scale,dpr_auto/mx/images/product-images/img_medium/123789456m.jpg",
                        }
                      }
                      style={
                        {
                          "bottom": 0,
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        }
                      }
                    />
                  </View>
                </View>
                <View
                  style={
                    {
                      "flexDirection": "column",
                      "flexShrink": 1,
                      "justifyContent": "space-around",
                      "padding": 5,
                    }
                  }
                  testID="item-details"
                >
                  <View
                    style={{}}
                  >
                    <Text
                      style={
                        {
                          "color": "#616161",
                          "flexShrink": 1,
                          "flexWrap": "wrap",
                          "fontSize": 12,
                        }
                      }
                    >
                      [missing "en.GENERICS.ITEM" translation] 123789456
                    </Text>
                  </View>
                  <View>
                    <Text
                      style={
                        {
                          "flexShrink": 1,
                          "flexWrap": "wrap",
                          "fontSize": 14,
                          "marginVertical": 2,
                        }
                      }
                    >
                      BAKERY ITEM
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Tests CategoryCard Component tests sending the status of an item when audits in progress is enabled 1`] = `
<View>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffffff",
        "borderBottomWidth": 1,
        "borderColor": "#616161",
        "flexDirection": "row",
        "height": 50,
        "paddingHorizontal": 15,
        "paddingVertical": 10,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "column",
        }
      }
    >
      <Text>
        43 - FOODSERVICE
      </Text>
      <Text>
        4 [missing "en.AUDITS.CUSTOM_ITEMS" translation]
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 10,
          "left": 15,
          "right": 15,
          "top": 10,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="collapsible-card"
    >
      <Icon
        color="#0071e9"
        name="keyboard-arrow-up"
        size={25}
      />
    </View>
  </View>
  <RCTScrollView
    data={
      [
        {
          "catgName": "FOODSERVICE",
          "catgNbr": 93,
          "completed": false,
          "completedTs": undefined,
          "completedUserId": undefined,
          "itemName": "Nature Valley Sweet And Salty Nuts Granola Bars",
          "itemNbr": 1234567890,
          "subCatgName": undefined,
          "subCatgNbr": 0,
          "upcNbr": "000055559999",
          "worklistType": "AU",
        },
        {
          "catgName": "FOODSERVICE",
          "catgNbr": 93,
          "completed": false,
          "completedTs": undefined,
          "completedUserId": undefined,
          "itemName": "Nature Valley Sweet And Salty Nuts Granola Bars",
          "itemNbr": 1234567899,
          "subCatgName": undefined,
          "subCatgNbr": 0,
          "upcNbr": "000055559934",
          "worklistType": "AU",
        },
        {
          "catgName": "ELECTRONICS",
          "catgNbr": 99,
          "completed": false,
          "completedTs": undefined,
          "completedUserId": undefined,
          "itemName": "ELECTRONIC ITEM",
          "itemNbr": 987654321,
          "subCatgName": undefined,
          "subCatgNbr": 0,
          "upcNbr": "777555333",
          "worklistType": "AU",
        },
        {
          "catgName": "FRESH BAKERY",
          "catgNbr": 88,
          "completed": false,
          "completedTs": undefined,
          "completedUserId": undefined,
          "itemName": "BAKERY ITEM",
          "itemNbr": 123789456,
          "subCatgName": undefined,
          "subCatgNbr": 0,
          "upcNbr": "111122223333",
          "worklistType": "RA",
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    getItemLayout={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ffffffff",
              "flexDirection": "row",
              "height": 100,
              "justifyContent": "flex-start",
              "marginBottom": 2,
              "opacity": 1,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "flex": 1,
                "justifyContent": "space-evenly",
              }
            }
          >
            <View
              style={
                {
                  "marginTop": 2,
                  "width": "100%",
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "backgroundColor": "#ffffffff",
                    "flexDirection": "row",
                    "opacity": 1,
                    "padding": 5,
                    "paddingLeft": 10,
                    "width": "100%",
                  }
                }
                testID="itemCard"
              >
                <View
                  style={
                    {
                      "flexDirection": "column",
                      "flexShrink": 1,
                      "justifyContent": "space-around",
                      "padding": 5,
                    }
                  }
                  testID="item-details"
                >
                  <View
                    style={
                      {
                        "paddingBottom": 10,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#616161",
                          "flexShrink": 1,
                          "flexWrap": "wrap",
                          "fontSize": 12,
                        }
                      }
                    >
                      [missing "en.GENERICS.ITEM" translation] 1234567890
                    </Text>
                  </View>
                  <View>
                    <Text
                      style={
                        {
                          "flexShrink": 1,
                          "flexWrap": "wrap",
                          "fontSize": 14,
                          "marginVertical": 2,
                        }
                      }
                    >
                      Nature Valley Sweet And Salty Nuts Granola Bars
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ffffffff",
              "flexDirection": "row",
              "height": 100,
              "justifyContent": "flex-start",
              "marginBottom": 2,
              "opacity": 1,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "flex": 1,
                "justifyContent": "space-evenly",
              }
            }
          >
            <View
              style={
                {
                  "marginTop": 2,
                  "width": "100%",
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "backgroundColor": "#ffffffff",
                    "flexDirection": "row",
                    "opacity": 1,
                    "padding": 5,
                    "paddingLeft": 10,
                    "width": "100%",
                  }
                }
                testID="itemCard"
              >
                <View
                  style={
                    {
                      "flexDirection": "column",
                      "flexShrink": 1,
                      "justifyContent": "space-around",
                      "padding": 5,
                    }
                  }
                  testID="item-details"
                >
                  <View
                    style={
                      {
                        "paddingBottom": 10,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#616161",
                          "flexShrink": 1,
                          "flexWrap": "wrap",
                          "fontSize": 12,
                        }
                      }
                    >
                      [missing "en.GENERICS.ITEM" translation] 1234567899
                    </Text>
                  </View>
                  <View>
                    <Text
                      style={
                        {
                          "flexShrink": 1,
                          "flexWrap": "wrap",
                          "fontSize": 14,
                          "marginVertical": 2,
                        }
                      }
                    >
                      Nature Valley Sweet And Salty Nuts Granola Bars
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ffffffff",
              "flexDirection": "row",
              "height": 100,
              "justifyContent": "flex-start",
              "marginBottom": 2,
              "opacity": 1,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "flex": 1,
                "justifyContent": "space-evenly",
              }
            }
          >
            <View
              style={
                {
                  "marginTop": 2,
                  "width": "100%",
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "backgroundColor": "#ffffffff",
                    "flexDirection": "row",
                    "opacity": 1,
                    "padding": 5,
                    "paddingLeft": 10,
                    "width": "100%",
                  }
                }
                testID="itemCard"
              >
                <View
                  style={
                    {
                      "flexDirection": "column",
                      "flexShrink": 1,
                      "justifyContent": "space-around",
                      "padding": 5,
                    }
                  }
                  testID="item-details"
                >
                  <View
                    style={
                      {
                        "paddingBottom": 10,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#616161",
                          "flexShrink": 1,
                          "flexWrap": "wrap",
                          "fontSize": 12,
                        }
                      }
                    >
                      [missing "en.GENERICS.ITEM" translation] 987654321
                    </Text>
                  </View>
                  <View>
                    <Text
                      style={
                        {
                          "flexShrink": 1,
                          "flexWrap": "wrap",
                          "fontSize": 14,
                          "marginVertical": 2,
                        }
                      }
                    >
                      ELECTRONIC ITEM
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ffffffff",
              "flexDirection": "row",
              "height": 100,
              "justifyContent": "flex-start",
              "marginBottom": 2,
              "opacity": 1,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "flex": 1,
                "justifyContent": "space-evenly",
              }
            }
          >
            <View
              style={
                {
                  "marginTop": 2,
                  "width": "100%",
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "backgroundColor": "#ffffffff",
                    "flexDirection": "row",
                    "opacity": 1,
                    "padding": 5,
                    "paddingLeft": 10,
                    "width": "100%",
                  }
                }
                testID="itemCard"
              >
                <View
                  style={
                    {
                      "flexDirection": "column",
                      "flexShrink": 1,
                      "justifyContent": "space-around",
                      "padding": 5,
                    }
                  }
                  testID="item-details"
                >
                  <View
                    style={
                      {
                        "paddingBottom": 10,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#616161",
                          "flexShrink": 1,
                          "flexWrap": "wrap",
                          "fontSize": 12,
                        }
                      }
                    >
                      [missing "en.GENERICS.ITEM" translation] 123789456
                    </Text>
                  </View>
                  <View>
                    <Text
                      style={
                        {
                          "flexShrink": 1,
                          "flexWrap": "wrap",
                          "fontSize": 14,
                          "marginVertical": 2,
                        }
                      }
                    >
                      BAKERY ITEM
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
